<?xml version="1.0"?>
<package format="3">
  <name>gopigo3_node</name>
  <version>0.0.0</version>
  <description>GoPiGo3</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="Rauch.Christian@gmx.de">Christian Rauch</maintainer>

  <license>MIT</license>

  <url type="website">https://www.dexterindustries.com/gopigo3/</url>
  <url type="website">https://github.com/DexterInd/GoPiGo3</url>


  <buildtool_depend>colcon</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
   <build_type>ament_python</build_type>
  </export>
</package>
